Stop stretching home page background image

--- a/styles/style.css
+++ b/styles/style.css
@@ -74,7 +74,9 @@ p {
 
 .hero {
   background: url('../img/background.jpg');
-  background-size: 100% 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   text-align: center;
   padding: 160px 20px;
 }
